# oop-lab-work1

./: CMakeLists.txt  README.md  run_cli.bat  run_gui.bat
include/: assocset.h  complex.h  history.h  number.h  quaternion.h  stackcalc.h
scr/: complex.cpp  gui_win.cpp  history.cpp  main.cpp  quaternion.cpp  stackcalc.cpp
